compiler/src/test/resources/golden/errors/map_wrong_key_type.dawn
use std/map

pub fn main() -> Unit !io = {
  let m = map.from([("a", 1)])
  println(to_string(map.get(m, 5)))
}
