compiler/src/test/resources/golden/errors/map_wrong_key_type.err
error: argument type mismatch: expected String, got Int
  --> map_wrong_key_type.dawn:5:32
  |
5 |   println(to_string(map.get(m, 5)))
  |                                ^
  = hint: signature: fn get[K, V](m: Map[K, V], key: K) -> Option[V]
